updated all quotes in HTML pages, reduced width and corrected alignment of form

--- a/styles.css
+++ b/styles.css
@@ -203,6 +203,8 @@ form {
   background-color: f7f5f0;
   padding: 20px;
   text-align: left;
+  width: 50%;
+  display: inline-block;
 }
 
 
